# ChangeLog for media-libs/alsa-lib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.276 2009/05/06 17:49:25 beandog Exp $

*alsa-lib-1.0.20 (06 May 2009)

  06 May 2009; Steve Dibb <beandog@gentoo.org> +alsa-lib-1.0.20.ebuild:
  Version bump

  31 Mar 2009; Raúl Porcel <armin76@gentoo.org> alsa-lib-1.0.16.ebuild,
  alsa-lib-1.0.17a.ebuild:
  arm/sh stable

  17 Mar 2009; Doug Goldstein <cardoe@gentoo.org> alsa-lib-1.0.18.ebuild:
  mark amd64 stable

*alsa-lib-1.0.19 (19 Jan 2009)

  19 Jan 2009; <chainsaw@gentoo.org> +alsa-lib-1.0.19.ebuild:
  Version bump. The ChangeLog may interest you, which you can find here:
  http://www.alsa-project.org/main/index.php/Changes_v1.0.18_v1.0.19

  22 Dec 2008; Raúl Porcel <armin76@gentoo.org> alsa-lib-1.0.17a.ebuild:
  ia64 stable wrt #245517

  21 Dec 2008; nixnut <nixnut@gentoo.org> alsa-lib-1.0.17a.ebuild:
  Stable on ppc wrt bug 245517

  20 Dec 2008; Ferris McCormick <fmccor@gentoo.org> alsa-lib-1.0.17a.ebuild:
  Sparc stable, Bug #245517.

  20 Dec 2008; Thomas Anderson <gentoofan23@gentoo.org>
  alsa-lib-1.0.17a.ebuild:
  stable amd64, bug 245517

  16 Dec 2008; Jeroen Roovers <jer@gentoo.org> alsa-lib-1.0.17a.ebuild:
  Stable for HPPA (bug #245517).

  15 Dec 2008; <ssuominen@gentoo.org> alsa-lib-1.0.17a.ebuild:
  x86 stable wrt #245517

  12 Dec 2008; Brent Baude <ranger@gentoo.org> alsa-lib-1.0.17a.ebuild:
  Marking alsa-lib-1.0.17a ppc64 for bug 245517

  11 Dec 2008; Tobias Klausmann <klausman@gentoo.org>
  alsa-lib-1.0.17a.ebuild:
  Stable on alpha, bug #245517

*alsa-lib-1.0.18 (11 Nov 2008)

  11 Nov 2008; Steve Dibb <beandog@gentoo.org> +alsa-lib-1.0.18.ebuild:
  Version bump, bug 239559

*alsa-lib-1.0.17a (01 Sep 2008)

  01 Sep 2008; Petteri Räty <betelgeuse@gentoo.org>
  +alsa-lib-1.0.17a.ebuild:
  Version bump.

*alsa-lib-1.0.17-r1 (03 Aug 2008)

  03 Aug 2008; Patrick McLean <chutzpah@gentoo.org>