@@ -12,7 +12,8 @@ EBUILD alsa-lib-1.0.16.ebuild 2795 RMD160 379a5144d24ed8797c6517dac8a3644c731e24
 EBUILD alsa-lib-1.0.17-r1.ebuild 3047 RMD160 627a1fb02bef22a1b43f81949e9f9c9d92e21abf SHA1 f30c88e7bd21830ea2d9cfbb78c909dc541864e1 SHA256 7de17d17cf574085b847345db5cb216adf0ea730553d33f8f458dec1d54b8411
 EBUILD alsa-lib-1.0.17a.ebuild 2831 RMD160 629a2e819fa1b980bdee7c4c1841ccff889395c8 SHA1 7851e916e6ef09ec218c17456d622c5b2eabccbb SHA256 f8006a6739f81ca65e13209ffc6a996084ddfd6b52f7496082aa6aff00b579fe
 EBUILD alsa-lib-1.0.18.ebuild 2827 RMD160 6204d5af65621e5aa0626053d8a2c56081eb4957 SHA1 faafdceaf69694389ecb8a649876f03a18727702 SHA256 2742b33051db984a760b979a54afc7831f63aa24216750cc5b3332cf0a1a175f
-EBUILD alsa-lib-1.0.19.ebuild 2831 RMD160 8afff62acf0809922c588c389515dd0a41672af9 SHA1 6aad41b9413ef32ea02b95c2f72c98551f77b730 SHA256 1c8c52f0db9738bf52d31458d0bebaaded5d5f629e267b1c8ed4c5b7204104f3
+EBUILD alsa-lib-1.0.19.ebuild 2829 RMD160 04c22e3fc88c122367aae496a8649a609cd2a39e SHA1 581dcc16486c1290bdf05ee2c7994e14858d2fdc SHA256 d04554e896cb1d2100b355fedc49b78c5486d33463333e764734f18d447789f6
+EBUILD alsa-lib-1.0.20-r1.ebuild 2741 RMD160 3c9c4f4b55012b795462d2369a43ee87f86a2cd1 SHA1 b23066a222dd95be187789f3c98533981f5c6064 SHA256 4cae3e11181465a23fd64b32c92723eb440f7a55828e9dd5792c5edb9ba2d921
 EBUILD alsa-lib-1.0.20.ebuild 2830 RMD160 7ce736d28f455983dc0328e24f8f8539c8ceaa8e SHA1 6e725bb6d9d0f3b507eb947812309000aada4063 SHA256 12d6f9399145d53490c927a23899e6c009942c9ba7762dab1c9b33c93730f430
-MISC ChangeLog 41035 RMD160 8559e403f79432977083b1f7957592a6e9e4030a SHA1 d51bf815544e0d5c2b27fde5c4aaed48cc95fcfd SHA256 b4c820d820cf185bf12c897b0f0ab75d44be6bb274ca6d9386aa5a4d51118edd
+MISC ChangeLog 41300 RMD160 44627b342dffd7112629a64c570d03140eed6d78 SHA1 da81e441847dc215e858e4dbfeda45057217c50c SHA256 a5fcb0594cbb4c384373ed69f0b6a29f575222a246c8991edc87489d5fd5be08
 MISC metadata.xml 435 RMD160 677502d2793c817b02c1c09f5413e6f672f5f245 SHA1 ab8e94692cb97938014d3d054c8af7098a4eb46a SHA256 59a108b215b33d04312fe9ace912de59b2b5101400c1e57bcc37d5fde8862e3b
