@@ -1,6 +1,14 @@
 # ChangeLog for media-libs/alsa-lib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.276 2009/05/06 17:49:25 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.278 2009/06/04 19:40:17 fmccor Exp $
+
+  04 Jun 2009; Ferris McCormick <fmccor@gentoo.org> alsa-lib-1.0.19.ebuild:
+  Sparc stable, part of Bug #272682.
+
+*alsa-lib-1.0.20-r1 (04 Jun 2009)
+
+  04 Jun 2009; Steve Dibb <beandog@gentoo.org> +alsa-lib-1.0.20-r1.ebuild:
+  Drop optional midi support, bug 272659
 
 *alsa-lib-1.0.20 (06 May 2009)
 
